# rust-markex

./: Cargo.toml  README.md
doc/: api-reference-for-llm.md
doc/for-llm/: api-reference-for-llm.md
docs/for-llm/: api-reference-for-llm.md
docs/rustdoc/: fence.md  lib.md
docs/rustdoc/tag/: fence.md  mod.md  options.md  tag_iter.md  tag_ref_iter.md
examples/: c01-tag.rs
src/: error.rs  lib.rs
src/tag/: attrs_parser.rs  extract.rs  extract_tests.rs  extracted_data.rs  fence.rs  mod.rs  options.rs  parts.rs  parts_ref.rs  tag.rs  tag_elem.rs  tag_elem_iter.rs  tag_elem_iter_tests.rs  tag_elem_ref_iter.rs  tag_elem_ref_iter_tests.rs  tag_iter.rs  tag_iter_tests.rs  tag_ref.rs  tag_ref_iter.rs  tag_ref_iter_tests.rs
src/tag/support/: attrs_parser.rs  attrs_parser_tests.rs  mod.rs
